# InsightDB

./: .gitignore  AGENTS.md  Cargo.toml  ConnectionFailed { message: "无法建立连接池: Access denied for user 'root'@'...' (using password: YES)" }  No drivers installed. Please see the documentation in `sqlx::any` for details.  SETUP.md  right: Some("1")
.github/workflows/: ci.yml  release.yml
docs/: AI_KNOWLEDGE_BASE.md  ARCHITECTURE_AND_STANDARDS.md  DESIGN_AND_PLAN.md  DEV_NOTES.md
insightdb_advisor/: Cargo.toml
insightdb_advisor/src/: lib.rs
insightdb_advisor/tests/: integration_tests.rs
insightdb_ai/: Cargo.toml
insightdb_ai/src/: client.rs  lib.rs  prompt.rs  sanitizer.rs  types.rs
insightdb_ai/tests/: integration_tests.rs
insightdb_catalog/: Cargo.toml
insightdb_catalog/src/: collector.rs  lib.rs  models.rs
insightdb_catalog/tests/: integration_tests.rs
insightdb_connector/: Cargo.toml
insightdb_connector/examples/: simple.rs
insightdb_connector/knowledge-base/: README.md  errors.md
insightdb_connector/src/: cancel.rs  config.rs  connection.rs  error.rs  lib.rs  query.rs
insightdb_connector/tests/: integration_tests.rs
insightdb_desktop/: index.html  package-lock.json  package.json
insightdb_desktop/src/: App.css  App.tsx
insightdb_desktop/src-tauri/: Cargo.toml  tauri.conf.json
insightdb_desktop/src-tauri/capabilities/: default.json
insightdb_desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sql_guard.rs
insightdb_desktop/src/api/: adapter.ts  types.ts
insightdb_desktop/src/components/: AiPanel.tsx  ConnectionPanel.tsx  DiagnosisReport.tsx  ExplainViewer.tsx  HistoryPanel.tsx  PromptPreview.tsx  ResultsViewer.tsx  SqlWorkspace.tsx
insightdb_desktop/src/stores/: appStore.ts
insightdb_explain/: Cargo.toml
insightdb_explain/src/: lib.rs  mysql_parser.rs  plan.rs  postgres_parser.rs  runner.rs
insightdb_explain/tests/: integration_tests.rs
insightdb_rules/: Cargo.toml
insightdb_rules/src/: abnormal_scan_rows.rs  engine.rs  filesort.rs  full_table_scan.rs  lib.rs  missing_index.rs  models.rs  nested_loop_risk.rs  temporary_table.rs
insightdb_storage/: Cargo.toml
insightdb_storage/src/: lib.rs  storage.rs
