[package]
name = "insightdb_advisor"
version = "0.1.0"
edition = "2021"
description = "InsightDB 诊断建议层：聚合规则结果、去重排序、生成诊断报告"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
insightdb_rules = { path = "../insightdb_rules" }
insightdb_explain = { path = "../insightdb_explain" }
insightdb_catalog = { path = "../insightdb_catalog" }

[dev-dependencies]
insightdb_connector = { path = "../insightdb_connector" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["any", "runtime-tokio-rustls", "mysql", "postgres"] }
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["mysql", "postgres"] }

[lib]
name = "insightdb_advisor"
path = "src/lib.rs"
