[package]
name = "insightdb_rules"
version = "0.1.0"
edition = "2021"
description = "InsightDB 确定性诊断规则引擎，基于执行计划和元数据输出结构化 findings"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
insightdb_explain = { path = "../insightdb_explain" }
insightdb_catalog = { path = "../insightdb_catalog" }

[dev-dependencies]
insightdb_connector = { path = "../insightdb_connector" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["any", "runtime-tokio-rustls", "mysql", "postgres"] }
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["mysql", "postgres"] }

[lib]
name = "insightdb_rules"
path = "src/lib.rs"
