[package]
name = "insightdb_desktop"
version = "0.1.0"
edition = "2021"
description = "InsightDB 桌面诊断工作台 — Tauri Bridge + React Frontend"

[lib]
name = "insightdb_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"

insightdb_connector = { path = "../../insightdb_connector" }
insightdb_catalog = { path = "../../insightdb_catalog" }
insightdb_explain = { path = "../../insightdb_explain" }
insightdb_rules = { path = "../../insightdb_rules" }
insightdb_advisor = { path = "../../insightdb_advisor" }
insightdb_ai = { path = "../../insightdb_ai" }
